<resources>
    <string name="app_name">Church Driver</string>
    <string name="ok_text">OK</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="chruch_ride">Church Ride</string>
    <string name="become_chruchrider">Become a Church Driver</string>
    <string name="powered_by">Powered by Church Ride</string>
    <string name="login_now">Get Moving with Church Ride</string>
    <string name="phone_number">Enter Phone Number</string>
    <string name="login">LOGIN</string>
    <string name="please_enter_user_id">Please enter Mobile Number</string>
    <string name="invalid_login_details">INVALID LOGIN DETAILS</string>
    <string name="dentz">Dentz</string>
    <string name="logout">LOGOUT</string>
    <string name="choose_language">Choose App Language</string>
    <string name="choose_group">Choose Group:</string>
    <string name="questions">Options:</string>
    <string name="choose_message">Choose Message:</string>
    <string name="my_profile">My Profile</string>
    <string name="view_reports">View Reports</string>
    <string name="by_logging_in_you_may_receive_an_sms_for_verification">By Logging in you may receive an sms for verification.</string>
    <string name="enter_the_6_digit_code">Enter the 6 digit code sent to</string>
    <string name="next">NEXT</string>
    <string name="invalid_otp_entered">INVALID OTP ENTERED</string>
    <string name="resend_code">Didnot Receive OTP?</string>
    <string name="resendotp">Resend OTP</string>
    <string name="step_1_of_3">STEP 1 OF 3</string>
    <string name="step_2_of_3">STEP 2 OF 3</string>
    <string name="enter_driver_details_to_drive_with_church_ride">Enter Driver Details to drive with Church Ride</string>
    <string name="enter_name">Enter Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="email_address">Enter Email Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_zipcode">Enter Zipcode</string>
    <string name="choose_church_for_pickup_drop">Choose Church For Pickup/Drop</string>
    <string name="no_church_has_been_added_contact_admin">No church has been added contact admin</string>
    <string name="all_fields_need_to_be_filled">ALL FIELDS NEED TO BE FILLED</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="camera_permission_was_denied_unable_to_take_a_picture">Camera permission was denied. Unable to take a picture.</string>
    <string name="choose_profile_image">CHOOSE PROFILE IMAGE</string>
    <string name="cancel">CANCEL</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="storage_permission_was_denied">Storage permission was denied.</string>
    <string name="enter_vehicle_details_to_drive_with_church_ride">Enter Vehicle Details to drive with Church Ride</string>
    <string name="enter_vehicle_type">Enter Vehicle Type</string>
    <string name="enter_make">Enter Vehicle Make</string>
    <string name="enter_vehicle_model">Enter Vehicle Model</string>
    <string name="enter_year">Enter Year</string>
    <string name="enter_color">Enter Color</string>
    <string name="no_of_doors">No Of Doors</string>
    <string name="no_of_seats">No Of Seats</string>
    <string name="step_3_of_3">STEP 3 OF 3</string>
    <string name="upload_all_below_mentioned_documents">Upload all below mentioned documents</string>
    <string name="note">Note:</string>
    <string name="comment">Comment:</string>
    <string name="no_image_choosen">No Image Choosen</string>
    <string name="choose_image">Choose Image</string>
    <string name="image_added">Image Added</string>
    <string name="all_images_need_to_be_uploaded">All Images need to be uploaded</string>
    <string name="close">CLOSE</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">TransGender</string>
    <string name="choose_image_to_upload">CHOOSE IMAGE TO UPLOAD</string>
    <string name="enter_state">Enter State</string>
    <string name="documents">Documents</string>
    <string name="verified">VERIFIED</string>
    <string name="rejected">REJECTED</string>
    <string name="pending">PENDING</string>
    <string name="document_verification_status">Document Verification Status</string>
    <string name="contact_us">Contact Us</string>
    <string name="reupload_image">REUPLOAD IMAGE</string>
    <string name="view_added_image">VIEW ADDED IMAGE</string>
    <string name="failed_to_upload_image_try_again">Failed To Upload Image. Try Again</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="driver_details">Driver Details</string>
    <string name="driver_name">Driver Name</string>
    <string name="gender">Gender</string>
    <string name="email_addresss">Email Address</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="church_for_pickup_drop">Church for Pickup/Drop</string>
    <string name="zipcode">Zipcode</string>
    <string name="profile">Profile</string>
    <string name="reupload">ReUpload</string>
    <string name="view">View</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="make">Make</string>
    <string name="type">Type</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="doors_and_seats">Doors &amp; Seats</string>
    <string name="enter_driver_mobile_number">Enter Driver Mobile Number</string>
    <string name="search_now">SEARCH</string>
    <string name="registered_driver_details_list">Drivers List</string>
    <string name="enter_comment_if_any">Enter Comment(If Any)</string>
    <string name="reject">REJECT</string>
    <string name="newly_registered">ALL Registered</string>
    <string name="approved_drivers">Approved</string>
    <string name="unapproved_drivers">Unapproved</string>
    <string name="sorry_no_drivers_are_availble_on_the_selected_category">Sorry No drivers are availble on the selected category</string>
    <string name="unlock_driver_to_take_trips">Lock Or Unlock Driver</string>
    <string name="locked">LOCKED</string>
    <string name="slide_to_lock">SLIDE TO LOCK</string>
    <string name="unlocked">UNLOCKED</string>
    <string name="slide_to_unlock">SLIDE TO UNLOCK</string>
    <string name="go">GO</string>
    <string name="off">OFF</string>
    <string name="click_go_to_make_you_online">Click <font color='#FF3700B3'>GO</font> To Make You Online</string>
    <string name="you_re_offline">You\'re Offline</string>
    <string name="you_re_online">You\'re Online</string>
    <string name="turn_location_on_on_settings_page">TURN LOCATION ON IN SETTINGS PAGE</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="notification_permission_is_required_please_allow_notification_permission_from_setting">Notification permission is required, Please allow notification permission from setting</string>
    <string name="notification_permission_is_required_to_show_notification">Notification permission is required, to show notification</string>
    <string name="alert">Alert</string>
    <string name="permission_needed">Permission Needed!</string>
    <string name="background_location_permission_needed_tap_allow_all_time_in_the_next_screen">Background Location Permission Needed!, Tap \"Allow all time\" in the next screen</string>
    <string name="location_is_not_enabled">Location is not enabled</string>
    <string name="open_location_settings_and_turn_it_on">Open Location Settings And Turn It On</string>
    <string name="yes">YES</string>
    <string name="please_click_back_again_to_exit">click BACK again to exit and go to offline mode.</string>
    <string name="click_back_again_to_exit">click BACK again to exit</string>
    <string name="failed_fetching_contact_information_try_again_later">Failed Fetching Contact Information.Try Again Later.</string>
    <string name="accept_ride">ACCEPT RIDE</string>
    <string name="estimated_pick_up_time">Estimated Pick Up Time</string>
    <string name="allow_overlay_permission_for_displaying_ride_request">ALLOW OVERLAY PERMISSION FOR DISPLAYING RIDE REQUEST</string>
    <string name="new_ride_request_received">New Ride Request Received</string>
    <string name="failed_try_again">Failed Try Again</string>
    <string name="missing_location_permission">Missing Location Permission</string>
</resources>