<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/appColor"
    android:gravity="top"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".view.GetStartedPage">
    <com.example.loadinganimation.LoadingAnimation
        android:id="@+id/loadingAnim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        app:barType="@drawable/triad_ring"
        app:boldText="false"
        app:enlarge="5"
        android:visibility="gone"
        app:textColor="@color/purple_500"
        app:textSize="15sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="top"
        android:layout_marginTop="50sp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:gravity="center"
            android:orientation="vertical">
            <!--text view for heading-->
            <!--text view for sub heading-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/enter_the_6_digit_code"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold"
                android:theme="@style/loginPageSubHeadingTextTheme" />

            <TextView
                android:id="@+id/codesent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:layout_marginTop="20sp"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/otp_view"
                android:layout_marginTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:text_typeface="@font/regular"
                app:height="40dp"
                app:width="40dp"
                android:fontFamily="@font/regular"
                app:bar_enabled="true"
                app:bar_height="2dp"
                app:length="6"
                app:otp_text_size="24dp"/>
            <TextView
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/resend_code"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:theme="@style/loginPageSubHeadingTextTheme" />
            <TextView
                android:id="@+id/resendotp"
                android:layout_marginTop="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/resendotp"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:theme="@style/loginPageSubHeadingTextTheme" />


            <com.apachat.loadingbutton.core.customViews.CircularProgressButton
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20sp"
                android:padding="10sp"
                android:background="@drawable/buttonback"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold">

            </com.apachat.loadingbutton.core.customViews.CircularProgressButton>



        </LinearLayout>
    </LinearLayout>


</LinearLayout>