<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/documentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="start"
                android:text="@string/upload_all_below_mentioned_documents"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:theme="@style/loginPageSubHeadingTextTheme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="start"
                android:text="*"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                android:theme="@style/loginPageSubHeadingTextTheme" />
        </LinearLayout>


        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/regular"
            android:gravity="start"
            android:text="@string/upload_all_below_mentioned_documents"
            android:textColor="@color/grey"
            android:textSize="17sp"
            android:textStyle="bold"
            android:theme="@style/loginPageSubHeadingTextTheme" />

        <LinearLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5sp"
            android:background="@drawable/edittextclickable"
            android:orientation="horizontal">

            <Button
                android:id="@+id/chooseimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:fontFamily="@font/regular"
                android:text="@string/choose_image">

            </Button>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5sp"
                android:gravity="center">

                <TextView
                    android:id="@+id/filechoosen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:gravity="start"
                    android:text="@string/no_image_choosen"
                    android:textColor="@color/grey"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:theme="@style/loginPageSubHeadingTextTheme" />

                <ImageView
                    android:id="@+id/tickImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2sp"
                    android:src="@drawable/baseline_done_24"
                    android:visibility="gone">

                </ImageView>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
