<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monomedium"
                android:padding="10dp"
                android:text="Heading"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/lightgrey" />

            <LinearLayout
                android:id="@+id/reuploadlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_drive_folder_upload_24">

                </ImageView>

                <TextView
                    android:id="@+id/reupload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:fontFamily="@font/monomedium"
                    android:text="@string/reupload_image"
                    android:textColor="@color/grey"
                    android:textSize="15sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_preview_24">

                </ImageView>

                <TextView
                    android:id="@+id/viewupload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:fontFamily="@font/monomedium"
                    android:text="@string/view_added_image"
                    android:textColor="@color/grey"
                    android:textSize="15sp" />


            </LinearLayout>

        </LinearLayout>

        <com.apachat.loadingbutton.core.customViews.CircularProgressButton
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10sp"
            android:background="@drawable/buttonback"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </com.apachat.loadingbutton.core.customViews.CircularProgressButton>

    </LinearLayout>

</LinearLayout>
